[tool.poetry]
name = "edna"
version = "0.1.0"
description = ""
authors = ["Serokell <hi@serokell.io>"]

[tool.poetry.dependencies]
python = "3.9.*"
numpy = "^1.20.2"
scipy = "^1.6.2"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]
matplotlib = "^3.4.1"
pylint = "^2.7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
