[tool.poetry]
name = "edna"
version = "0.1.0"
description = ""
authors = ["Serokell <hi@serokell.io>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
numpy = "^1.20.2"
scipy = "^1.6.2"
sklearn = "^0.0"
pandas = "^1.2.4"

[tool.poetry.dev-dependencies]
pylint = "^2.7.4"
pytest = "^6.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
